# candidate-data-transformer

./: .gitignore  README.md  pyproject.toml
configs/: custom.json  default.json
docs/: architecture.md  scenario_map.md
docs/superpowers/plans/: 2026-06-30-candidate-transformer.md
output/: custom_profiles.json  default_profiles.json
sample_data/: ats_export.json  manifest.json  recruiter_export.csv  recruiter_notes.txt
sample_generator/: __init__.py  __main__.py  cli.py  config.py  models.py  orchestrator.py  personas.py
sample_generator/scenarios/: mutators.py  registry.py
sample_generator/writers/: ats_writer.py  csv_writer.py  notes_writer.py
src/: cli.py  env.py  models.py  pipeline.py
src/adapters/: __init__.py  ats_adapter.py  csv_adapter.py  github_adapter.py  link_detector.py  notes_adapter.py
src/match/: __init__.py  identity.py
src/merge/: __init__.py  confidence.py  survivorship.py
src/normalize/: __init__.py  emails.py  location.py  names.py  phones.py  skills.py
src/project/: __init__.py  paths.py  projector.py
src/validate/: __init__.py  validator.py
tests/: conftest.py  test_adapters.py  test_cli.py  test_config.py  test_env.py  test_github.py  test_location.py  test_match.py  test_merge.py  test_models.py  test_normalize.py  test_notes_extractor.py  test_pipeline.py  test_project.py  test_sample_generator_adapters.py  test_sample_generator_determinism.py  test_sample_generator_pipeline.py  test_sample_generator_scenarios.py
webapp/backend/app/: main.py
webapp/frontend/: index.html  package-lock.json  package.json
(+34 files in other folders)
