[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "candidate-data-transformer"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2.0",
  "phonenumbers>=8.13",
  "httpx>=0.27",
  "python-slugify>=8.0",
  "pycountry>=24.6",
  "python-dotenv>=1.0",
  "Faker>=24.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "Faker>=24.0"]
generate = ["Faker>=24.0"]

[project.scripts]
generate-samples = "sample_generator.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "sample_generator*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "github: live GitHub API tests (requires GITHUB_TOKEN)",
]